# BillGeneratorContractor

./: .env.example  .gitignore  10_WEEK_IMPLEMENTATION_PLAN.md  ACTION_PLAN_STATUS.md  CHANGES_APPLIED.md  DEPLOY_NOW.md  EXAMPLES_WORK_ORDER_OCR.md  FINAL_STATUS.md  GIT_UPDATE_SUMMARY.md  IMAGE_BY_IMAGE_GUIDE.md  INSTALL_TESSERACT.md  M1.MD  MILESTONE_CORE_TASK.md  Makefile  NEXT_STEPS.md  OPTION2_COMPLETE_GUIDE.md  PROGRESS_REPORT_WEEKS_1_7.md  PROJECT_STATUS_FINAL.md  QUICK_START_BATCH_TESTING.md  QUICK_START_COMPLETE_BILL.md  QUICK_START_GUIDE.md  README.md  README_RELIABILITY_SECTION.md  README_WORK_ORDER_PROCESSING.md  READY_TO_FILL.md  REFACTORING_SUMMARY_AND_TEST_PLAN.md  SESSION_SUMMARY.md  VIEW_WORK_ORDER_IMAGES.md  WEEK_10_TASKS.md  WEEK_1_TASKS.md  WEEK_6_COMPLETION_SUMMARY.md  WEEK_6_TASKS.md  WEEK_9_TASKS.md  WORK_ORDER_OCR_GUIDE.md  alembic.ini  app.py  auto_create_input_FULLY_AUTOMATED.py  auto_create_input_SMART_CASCADE.py  batch_manager.py  bills.db  (+23 more)
.streamlit/: config.toml
ATTACHED_ASSETS/: Perplex.txt  (+2 more)
REF_APPS_ARCHIVE/Bill-Contractor-Git5/: .replit  pnpm-lock.yaml  pyproject.toml
REF_APPS_ARCHIVE/Bill-Contractor-Git5/artifacts/bill-ui/: index.html  package.json  requirements.yaml
REF_APPS_ARCHIVE/Bill-Contractor-Git5/attached_assets/: Design_top_internationalTrends_for_1774230490586.md  react2026_1774230490586.md
REF_APPS_ARCHIVE/Bill-Contractor-Git5/backend/: pyproject.toml
REF_APPS_ARCHIVE/Bill-Contractor-Git5/docker/: Dockerfile.frontend  docker-compose.yml
REF_APPS_ARCHIVE/Bill-Contractor-Git5/docs/: ARCHITECTURE.md  PHASE0_BASELINE.md
(+928 files in other folders)
